--- a/aboutMe/Base.lproj/Main.storyboard
+++ b/aboutMe/Base.lproj/Main.storyboard
@@ -56,6 +56,13 @@
                                     <constraint firstAttribute="height" constant="300" id="PZX-sn-iLC"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text=" 😁 " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="999-sz-1lw">
+                                <rect key="frame" x="57" y="83" width="32" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.74679470062255859" green="0.93959015607833862" blue="0.7804604172706604" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
